fixes - remove logs - uncovered and fixed gps bug - get metadata from videos for info and upload - small none array issue when uploading

--- a/src/index.css
+++ b/src/index.css
@@ -182,3 +182,9 @@ h1 {
   display: flex;
   height: 25vh;
 }
+
+.pane-media {
+  height: 25vh;
+  width: 100%;
+  object-fit: cover;
+}
